# LDSPlite

./: .gitignore  .gitmodules  LICENSE  README.md  gradle.properties  settings.gradle
LDSP-lite/: build.gradle
LDSP-lite/src/androidTest/java/com/ldsp/ldsplite/: ExampleInstrumentedTest.kt
LDSP-lite/src/androidTest/java/com/ldsp/wavetablesynthesizer/: ExampleInstrumentedTest.kt
LDSP-lite/src/main/: AndroidManifest.xml
LDSP-lite/src/main/assets/: MockED.onnx  RTNueralLSTM.onnx  baseline.onnx  lstm_model.onnx  lstm_model[2].onnx  model.ort  topline.onnx
LDSP-lite/src/main/cpp/: CMakeLists.txt  LDSPlite.cpp  OboeAudioEngine.cpp  OboeAudioPlayer.cpp  WavetableOscillator.cpp  WavetableSynthesizer.cpp  get_android_api.bat  get_android_api.sh  get_android_version.bat  get_android_version.sh  ldsplite-native-lib.cpp  wavetablesynthesizer-native-lib.cpp
LDSP-lite/src/main/cpp/core/: CMakeLists.txt  LDSPlite.cpp  OboeAudioEngine.cpp  WSServer.cpp  WebServer.cpp  files_utils.cpp  ldsplite-native-lib.cpp  sensors.cpp
LDSP-lite/src/main/cpp/dependencies/: CMakeLists.txt
LDSP-lite/src/main/cpp/dependencies/oboe/: CMakeLists.txt
LDSP-lite/src/main/cpp/dependencies/oboe/common/: OboeDebug.h
LDSP-lite/src/main/cpp/dependencies/oboe/fullduplex/: FormatConverterBox.cpp  FullDuplexStream.cpp  FullDuplexStream.h
LDSP-lite/src/main/cpp/dependencies/onnxruntime/: CMakeLists.txt
LDSP-lite/src/main/cpp/dependencies/seasocks/: cmake_install.cmake
LDSP-lite/src/main/cpp/dependencies/seasocks/src/: cmake_install.cmake
LDSP-lite/src/main/cpp/dependencies/seasocks/src/main/c/: cmake_install.cmake
LDSP-lite/src/main/cpp/dependencies/seasocks/src/main/web/: cmake_install.cmake
LDSP-lite/src/main/cpp/examples/Fundamentals/sine/: render.cpp
LDSP-lite/src/main/cpp/examples/Gui/sliders/: render.cpp
LDSP-lite/src/main/cpp/examples/ML/BasicLSTM/: OrtModel.cpp  OrtModel.h  render.cpp
LDSP-lite/src/main/cpp/examples/MachineLearning/ONNX/: render.cpp
LDSP-lite/src/main/cpp/examples/MachineLearning/RTNeural/: RTNeuralLSTM.cpp  render.cpp
LDSP-lite/src/main/cpp/examples/MachineLearning/RTNeural_conditioned/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/AutoGuitarAmp_Test/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/AutoGuitarAmp_Timing/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/ED_Test/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/ED_Timing/: OrtModel.cpp  render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/GuitarLSTM_Test/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/GuitarLSTM_Timing/: inferenceTiming_GuitarLSTM_out1_onnx.txt  render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/baseline_Test/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/baseline_Timing/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/topline_Test/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/ONNX/topline_Timing/: OrtModel.h  render.cpp
LDSP-lite/src/main/cpp/examples/Performance/RTNeural/AutoGuitarAmp_Timing/: RTNeuralAutoGuitarAmp.h  render.cpp
LDSP-lite/src/main/cpp/examples/Performance/RTNeural/ED_Test/: RTNeuralED.h  lstm_eigen_custom.h  render.cpp
LDSP-lite/src/main/cpp/examples/Performance/RTNeural/ED_Timing/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/RTNeural/GuitarLSTM_Test/: render.cpp
LDSP-lite/src/main/cpp/examples/Performance/RTNeural/GuitarLSTM_Timing/: RTNeuralGuitarLSTM.cpp  RTNeuralGuitarLSTM.h  render.cpp
LDSP-lite/src/main/cpp/examples/Performance/latency_tester/: render.cpp
LDSP-lite/src/main/cpp/examples/example1/: render.cpp
LDSP-lite/src/main/cpp/examples/example2/: render.cpp
LDSP-lite/src/main/cpp/include/: CtrlInputs.h  LDSP-lite.h  LDSP.h  LDSP_log.h  LDSPlite.h  Log.h  OboeAudioEngine.h  OboeAudioPlayer.h  TouchHandler.h  WavetableFactory.h  WavetableSynthesizer.h  enums.h  files_utils.h  sensors.h
LDSP-lite/src/main/cpp/libraries/: CMakeLists.txt
LDSP-lite/src/main/cpp/libraries/AudioFile/: AudioFileUtilities.cpp
LDSP-lite/src/main/cpp/libraries/Gui/: Gui.cpp
LDSP-lite/src/main/cpp/libraries/OrtModel/: OrtModel.cpp  OrtModel.h
LDSP-lite/src/main/java/com/ldsp/ldsplite/: LDSPlite.kt  LDSPliteViewModel.kt  LoggingWavetableSynthesizer.kt  MainActivity.kt  NativeLDSPlite.kt  NativeWavetableSynthesizer.kt  TouchSurfaceView.kt
LDSP-lite/src/main/java/com/ldsp/ldsplite/ui/theme/: Shape.kt  Theme.kt
LDSP-lite/src/main/java/com/ldsp/wavetablesynthesizer/: LoggingWavetableSynthesizer.kt  MainActivity.kt
LDSP-lite/src/main/java/com/ldsp/wavetablesynthesizer/ui/theme/: Theme.kt
LDSP-lite/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  OboeAudioPlayer.cpp  WavetableFactory.cpp  WavetableOscillator.cpp  WavetableSynthesizer.cpp
app/src/main/cpp/examples/example1/: render.cpp
app/src/main/cpp/examples/example2/: render.cpp
app/src/main/cpp/include/: AudioPlayer.h  AudioSource.h  LDSP.h  WavetableOscillator.h  WavetableSynthesizer.h
app/src/main/java/com/ldsp/ldsplite/: WavetableSynthesizer.kt  WavetableSynthesizerViewModel.kt
app/src/main/java/com/ldsp/ldsplite/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/ldsp/wavetablesynthesizer/: NativeWavetableSynthesizer.kt  WavetableSynthesizer.kt  WavetableSynthesizerViewModel.kt
app/src/main/java/com/ldsp/wavetablesynthesizer/ui/theme/: Color.kt  Shape.kt  Type.kt
app/src/test/java/com/ldsp/ldsplite/: ExampleUnitTest.kt
app/src/test/java/com/ldsp/wavetablesynthesizer/: ExampleUnitTest.kt
